--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript"
 		src="http://cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js"></script>
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" /> -->
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/form.js"></script>
@@ -48,7 +46,7 @@
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
-							<li class="nav-item"><a href="index.html#prices" class="primary_btn">Bestellen</a></li>
+							<li class="nav-item"><a href="index.html#Options" class="primary_btn">Bestellen</a></li>
 						</ul>
 					</div>
 				</div>
@@ -91,7 +89,7 @@
 							ontwerpen en
 							bouwen een computer naar jou behoeften. Ook helpen we met schoonmaken en upgraden, zodat je
 							computer langer mee gaat.</p>
-						<a class="primary_btn" href="file:///C:/Users/onrus/Documents/comodo/about-us.html">Meer</a>
+						<a class="primary_btn" href="about-us.html">Meer</a>
 					</div>
 				</div>
 			</div>
@@ -99,15 +97,15 @@
 	</section>
 	<!--================End About Us Area =================-->
 
-	<!--================Start Recent Update Area =================-->
-	<section class="recent_update_area section_gap">
+	<!--================Start Example Area =================-->
+	<section class="example_area section_gap">
 		<div class="container">
 			<div>
 				<h2>
 					Voorbeelden
 				</h2>
 			</div>
-			<div class="recent_update_inner">
+			<div class="example_inner">
 				<ul class="nav nav-tabs" id="myTab" role="tablist">
 					<li class="nav-item">
 						<a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
@@ -130,7 +128,7 @@
 				</ul>
 				<div class="tab-content" id="myTabContent">
 					<div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
-						<div class="row recent_update_text">
+						<div class="row example_text">
 							<div class="col-md-12">
 								<div class="section_content">
 									<div class="row">
@@ -171,7 +169,7 @@
 						</div>
 					</div>
 					<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-						<div class="row recent_update_text">
+						<div class="row example_text">
 							<div class="col-md-12">
 								<div class="section_content">
 									<div class="row">
@@ -212,7 +210,7 @@
 						</div>
 					</div>
 					<div class="tab-pane fade show active" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-						<div class="row recent_update_text">
+						<div class="row example_text">
 							<div class="col-md-12">
 								<div class="section_content">
 									<div class="row">
@@ -258,10 +256,10 @@
 			</div>
 		</div>
 	</section>
-	<!--================End Recent Update Area =================-->
+	<!--================End Example Area =================-->
 
-	<!--================ Start Pricing Plans Area ================-->
-	<section class="pricing_area section_gap" id="prices">
+	<!--================ Start Option Area ================-->
+	<section class="options_area section_gap" id="Options">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
@@ -273,7 +271,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-3 col-md-6">
-					<div class="pricing_item">
+					<div class="options_item">
 						<h3 class="p_title">Advies</h3>
 						<h1 class="p_price">Altijd<br>20 euro</h1>
 						<div class="p_list">
@@ -291,7 +289,7 @@
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
-					<div class="pricing_item">
+					<div class="options_item">
 						<h3 class="p_title">Schoonmaak</h3>
 						<h1 class="p_price">Altijd<br>50 euro</h1>
 						<div class="p_list">
@@ -309,7 +307,7 @@
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
-					<div class="pricing_item">
+					<div class="options_item">
 						<h3 class="p_title">Upgrading</h3>
 						<h1 class="p_price">Onderdeel prijs</h1>
 						<div class="p_list">
@@ -327,7 +325,7 @@
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
-					<div class="pricing_item">
+					<div class="options_item">
 						<h3 class="p_title">PC bouwen</h3>
 						<h1 class="p_price">Computer prijs</h1>
 						<div class="p_list">
@@ -347,7 +345,7 @@
 			</div>
 		</div>
 	</section>
-	<!--================ End Pricing Plans Area ================-->
+	<!--================ End Option Plans Area ================-->
 
 
 	<!--================ Start Frequently Asked Questions Area ================-->
@@ -463,10 +461,6 @@
 	<!--================End Footer Area =================-->
 
 
-	<!--================ Modals =================-->
-		<!-- Modal -->
-
-	<!--================End Misc =================-->
 	<!-- adviesModal -->
 	<div class="modal fade" id="adviesModal" tabindex="-1" role="dialog" aria-labelledby="adviesModalLabel"
 	aria-hidden="true">
