--- a/legal.html
+++ b/legal.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="blog_page">
+<body class="project_page">
 
     <!--================Header Menu Area =================-->
     <header class="header_area">
@@ -41,7 +41,7 @@
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="nav-item"><a href="index.html#prices" class="primary_btn">Bestellen</a></li>
+                            <li class="nav-item"><a href="index.html#Options" class="primary_btn">Bestellen</a></li>
                         </ul>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
     <!--================End Home Banner Area =================-->
 
     <!--================Blog Area =================-->
-    <section class="blog_area single-post-area section_gap">
+    <section class="project_area single-post-area section_gap">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
@@ -1188,13 +1188,13 @@
                             </div>
                             <div class="col-lg-3  col-md-3">
                                 <div class="blog_info text-right">
-                                    <div class="post_tag">
+                                    <div class="project_tag">
                                         <a href="#">Food,</a>
                                         <a class="active" href="#">Technology,</a>
                                         <a href="#">Politics,</a>
                                         <a href="#">Lifestyle</a>
                                     </div>
-                                    <ul class="blog_meta list">
+                                    <ul class="project_meta list">
                                         <li><a href="#">Mark wiens<i class="lnr lnr-user"></i></a></li>
                                         <li><a href="#">12 Dec, 2017<i class="lnr lnr-calendar-full"></i></a></li>
                                         <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
@@ -1208,7 +1208,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-lg-9 col-md-9 blog_details">
+                            <div class="col-lg-9 col-md-9 project_details">
                                 <h2>Astronomy Binoculars A Great Alternative</h2>
                                 <p class="excert">
                                     MCSE boot camps have its supporters and its detractors. Some people do not understand
