--- a/single-blog.html
+++ b/single-blog.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="blog_page">
+<body class="project_page">
 
     <!--================Header Menu Area =================-->
     <header class="header_area">
@@ -41,7 +41,7 @@
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="nav-item"><a href="index.html#prices" class="primary_btn">Bestellen</a></li>
+                            <li class="nav-item"><a href="index.html#Options" class="primary_btn">Bestellen</a></li>
                         </ul>
                     </div>
                 </div>
@@ -68,8 +68,8 @@
     </section>
     <!--================End Home Banner Area =================-->
 
-    <!--================Blog Area =================-->
-    <section class="blog_area single-post-area section_gap">
+    <!--================Project Area =================-->
+    <section class="project_area single-project-area section_gap">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
@@ -94,7 +94,7 @@
                         </li> -->
                     </ul>
                 </div>
-                <div class="tab-content col-lg-8 posts-list" id="myTabContent">
+                <div class="tab-content col-lg-8 project-list" id="myTabContent">
                     <div class="tab-content">
                         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                             <div class="col-lg-12">
@@ -127,7 +127,7 @@
                                       </div>
                                 </div>
                             </div>
-                            <div class="col-lg-12 blog_details">
+                            <div class="col-lg-12 project_details">
                                 <h2>Houten tafel pc</h2>
                                 <p>
                                     Dit 3D design is alleen ter illustratie van het idee en is dus niet in detaile uitgewerk. 
@@ -205,13 +205,13 @@
                             </div>
                             <div class="col-lg-3  col-md-3">
                                 <div class="blog_info text-right">
-                                    <div class="post_tag">
+                                    <div class="project_tag">
                                         <a href="#">Food,</a>
                                         <a class="active" href="#">Technology,</a>
                                         <a href="#">Politics,</a>
                                         <a href="#">Lifestyle</a>
                                     </div>
-                                    <ul class="blog_meta list">
+                                    <ul class="project_meta list">
                                         <li><a href="#">Mark wiens<i class="lnr lnr-user"></i></a></li>
                                         <li><a href="#">12 Dec, 2017<i class="lnr lnr-calendar-full"></i></a></li>
                                         <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
@@ -225,7 +225,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-lg-9 col-md-9 blog_details">
+                            <div class="col-lg-9 col-md-9 project_details">
                                 <h2>Astronomy Binoculars A Great Alternative</h2>
                                 <p class="excert">
                                     MCSE boot camps have its supporters and its detractors. Some people do not understand
@@ -256,13 +256,13 @@
                             </div>
                             <div class="col-lg-3  col-md-3">
                                 <div class="blog_info text-right">
-                                    <div class="post_tag">
+                                    <div class="project_tag">
                                         <a href="#">Food,</a>
                                         <a class="active" href="#">Technology,</a>
                                         <a href="#">Politics,</a>
                                         <a href="#">Lifestyle</a>
                                     </div>
-                                    <ul class="blog_meta list">
+                                    <ul class="project_meta list">
                                         <li><a href="#">Mark wiens<i class="lnr lnr-user"></i></a></li>
                                         <li><a href="#">12 Dec, 2017<i class="lnr lnr-calendar-full"></i></a></li>
                                         <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
@@ -276,7 +276,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-lg-9 col-md-9 blog_details">
+                            <div class="col-lg-9 col-md-9 project_details">
                                 <h2>Astronomy Binoculars A Great Alternative</h2>
                                 <p class="excert">
                                     MCSE boot camps have its supporters and its detractors. Some people do not understand
@@ -304,7 +304,7 @@
             </div>
         </div>
     </section>
-    <!--================Blog Area =================-->
+    <!--================Project Area =================-->
 
     <!--================Footer Area =================-->
     <!--================Footer Area =================-->
