--- a/about-us.html
+++ b/about-us.html
@@ -40,7 +40,7 @@
 								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
-								<li class="nav-item"><a href="index.html#prices" class="primary_btn">Bestellen</a></li>
+								<li class="nav-item"><a href="index.html#Options" class="primary_btn">Bestellen</a></li>
 							</ul>
 						</div>
 					</div>
@@ -90,12 +90,8 @@
 		<!--================End About Us Area =================-->
 	
 		<!--========== Start Testimonials Area ==================-->
-		<section class="testimonials_area section_gap">
-			<div class="container">
-				<div class="testi_slider">
+		<section class="white_area section_gap">
 
-				</div>
-			</div>
 		</section>
 		<!--================ End Testimonials Area ================-->
 
@@ -118,8 +114,7 @@
 		</section>
 		<!--================End About Us Area =================-->
 
-	
-		<!--================Footer Area =================-->
+
 		<!--================Footer Area =================-->
 		<footer class="footer_area section_gap_top">
 			<div class="container">
