--- a/success-page.html
+++ b/success-page.html
@@ -43,7 +43,7 @@
             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item"><a href="index.html#prices" class="primary_btn">Bestellen</a></li>
+            <li class="nav-item"><a href="index.html#Options" class="primary_btn">Bestellen</a></li>
           </ul>
         </div>
       </div>
