legal and validation
There are links now to the "terms and conditions" and spaces are now allowed in the form subject and name.

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <!-- Required meta tags -->
@@ -106,7 +106,7 @@
                     <div class="form-group check">
                         <input class="form-check-input" name="check" type="checkbox" value="" id="agreement">
                         <label class="form-check-label" for="agreement">
-                            Ik ga akkoort met de algemene voorwaarden
+                            Ik ga akkoort met de <a href="legal.html">algemene voorwaarden</a>
                         </label>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
     </section>
     <!--================Contact Area =================-->
 
-    <!--================Footer Area =================-->
+
     <!--================Footer Area =================-->
     <footer class="footer_area section_gap_top">
         <div class="container">
