--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<!-- JQuery  JS-->
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
-	<script type="text/javascript"
-		src="http://cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js"></script>
+	<script type="text/javascript"src="http://cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js"></script>
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/form.js"></script>
@@ -503,7 +502,7 @@
 						<div class="form-group check">
 							<input class="form-check-input" name="check" type="checkbox" value="">
 							<label class="form-check-label">
-								Ik ga akkoort met de algemene voorwaarden
+								Ik ga akkoort met de <a href="legal.html">algemene voorwaarden</a>
 							</label>
 						</div>
 					</div>
@@ -579,7 +578,7 @@
 						<div class="form-group check">
 							<input class="form-check-input" name="check" type="checkbox" value="">
 							<label class="form-check-label">
-								Ik ga akkoort met de algemene voorwaarden
+								Ik ga akkoort met de <a href="legal.html">algemene voorwaarden</a>
 							</label>
 						</div>
 					</div>
@@ -656,7 +655,7 @@
 						<div class="form-group check">
 							<input class="form-check-input" name="check" type="checkbox" value="">
 							<label class="form-check-label">
-								Ik ga akkoort met de algemene voorwaarden
+								Ik ga akkoort met de <a href="legal.html">algemene voorwaarden</a>
 							</label>
 						</div>
 					</div>
@@ -734,7 +733,7 @@
 						<div class="form-group check">
 							<input class="form-check-input" name="check" type="checkbox" value="">
 							<label class="form-check-label">
-								Ik ga akkoort met de algemene voorwaarden
+								Ik ga akkoort met de <a href="legal.html">algemene voorwaarden</a>
 							</label>
 						</div>
 					</div>
