--- a/success-page.html
+++ b/success-page.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 
 <head>
   <!-- Required meta tags -->
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <!-- JQuery  JS-->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js"></script>
   <!-- main css -->
   <link rel="stylesheet" href="css/style.css">
 
